*Empty MediaWiki Message*

--- a/Vologdan_agj.mw
+++ b/Vologdan_agj.mw
@@ -121,13 +121,13 @@ File:Horses (vologda oblast).jpg|<small>Vologdan man hebod</small>
 
 == Irdkosketused ==
 
-* [http://www.vologda-oblast.ru/ Agjan valdmehišton oficialine sait] [[Venäkel'|(ven.)]]
-* [http://www.zs.gos35.ru/ Vologdan agjan Käskusenandajan tobmuz] [[Venäkel'|(ven.)]]
-* [http://russian-north.com/sekciya4/ Vologdan agjan käskišt] [[Venäkel'|(ven.)]]
-* [http://www.booksite.ru/pressa/index.htm Vologdan agj venälaižes lehtištos] [[Venäkel'|(ven.)]]
-* [http://power35.ru/ Vägisportladud Vologdan agjas] [[Venäkel'|(ven.)]]
-* [http://www.cultinfo.ru/index_e.htm Vologdan agjan kul'tur] [[Venäkel'|(ven.,]] [[Anglijan kel'|angl.,]] [[Saksan kel'|saks.)]]
-* [http://www.cultinfo.ru/brumfield Vologdan agjan arhitektur] [[Venäkel'|(ven.,]] [[Anglijan kel'|angl.)]]
+* [http://www.vologda-oblast.ru/ Agjan valdmehišton oficialine sait] (ven.)
+* [http://www.zs.gos35.ru/ Vologdan agjan Käskusenandajan tobmuz] (ven.)
+* [http://russian-north.com/sekciya4/ Vologdan agjan käskišt] (ven.)
+* [http://www.booksite.ru/pressa/index.htm Vologdan agj venälaižes lehtištos] (ven.)
+* [http://power35.ru/ Vägisportladud Vologdan agjas] (ven.)
+* [http://www.cultinfo.ru/index_e.htm Vologdan agjan kul'tur] (ven., angl., saks.)
+* [http://www.cultinfo.ru/brumfield Vologdan agjan arhitektur] (ven., angl.)
 
 {{Šablon:Venälaižen Federacijan subjektad}}
 
