*Empty MediaWiki Message*

--- a/Vanh_Oskol.mw
+++ b/Vanh_Oskol.mw
@@ -1,7 +1,7 @@
 '''Vanh Oskol''' ([[Venäkel'|ven.]]: ''Старый Оскол'') om lidn [[Venäma]]s, [[Belgorodan agj]]as.
 
-[[Kategorii:Venäma]]
-[[Kategorii:Lidnad]]
+[[Kategorii:Venäman lidnad]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ar:ستاري اوسكول]]
 [[az:Starıy Oskol]]
