*Empty MediaWiki Message*

--- a/Bugri_(Vsevoložskan_rajon).mw
+++ b/Bugri_(Vsevoložskan_rajon).mw
@@ -9,8 +9,8 @@ Se om [[Bugrin küläkund]]an administrativine keskuz. Eläjuden lugu — 6154 r
 * [http://spb-gazeta.narod.ru/bugry.htm Žilon fotod]
 
 {{stub}}
-[[Kategorii:Lidnad]]
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[et:Bugrõ]]
 [[fi:Pukra]]
