*Empty MediaWiki Message*

--- a/Uz'_Devätkino.mw
+++ b/Uz'_Devätkino.mw
@@ -10,7 +10,7 @@ Uden Devätkinon mödhe om nimitadud [[Fail:Spb metro line1.svg|27px|link=Кир
 
 {{stub}}
 
-[[Kategorii:Lidnad]]
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Новое Девяткино]]
