*Empty MediaWiki Message*

--- a/Malafejev_Väčeslav.mw
+++ b/Malafejev_Väčeslav.mw
@@ -3,8 +3,9 @@
 
 {{stub}}
 
-[[Kategorii:Futbolistad]]
 [[Kategorii:Zenit]]
+[[Kategorii:Venäman futbolistad]]
+[[Kategorii:Futbolistad kirjamišton mödhe]]
 
 [[ar:فياتشيسلاف مالافيف]]
 [[be-x-old:Вячаслаў Малафееў]]
