--- a/Denisov_Igor'.mw
+++ b/Denisov_Igor'.mw
@@ -3,8 +3,9 @@
 
 {{stub}}
 
-[[Kategorii:Futbolistad]]
 [[Kategorii:Zenit]]
+[[Kategorii:Venäman futbolistad]]
+[[Kategorii:Futbolistad kirjamišton mödhe]]
 
 [[ar:إيغور دينيسوف]]
 [[be-x-old:Ігар Дзянісаў]]
