--- a/Halk_(futbolist).mw
+++ b/Halk_(futbolist).mw
@@ -3,8 +3,9 @@
 
 {{stub}}
 
-[[Kategorii:Futbolistad]]
 [[Kategorii:Zenit]]
+[[Kategorii:Brazilijan futbolistad]]
+[[Kategorii:Futbolistad kirjamišton mödhe]]
 
 [[ar:هالك (لاعب كرة قدم)]]
 [[bg:Хълк (футболист)]]
