*Empty MediaWiki Message*

--- a/Danni.mw
+++ b/Danni.mw
@@ -3,8 +3,9 @@
 
 {{stub}}
 
-[[Kategorii:Futbolistad]]
 [[Kategorii:Zenit]]
+[[Kategorii:Portugalijan futbolistad]]
+[[Kategorii:Futbolistad kirjamišton mödhe]]
 
 [[ar:داني]]
 [[ca:Daniel Miguel Alves Gomes]]
