*Empty MediaWiki Message*

--- a/Nellänz'päiv.mw
+++ b/Nellänz'päiv.mw
@@ -1,4 +1,4 @@
-'''Nellänz'päiv''' om nedalin [[Nedalin päiväd|nedalin päiv]].
+'''Nellänz'päiv''' om nellänz' [[Nedalin päiväd|nedalin päiv]].
 
 {{Nedalin päiv}}
 
