--- a/1885.mw
+++ b/1885.mw
@@ -1,4 +1,4 @@
-'''1885''' — järgeline <!-- предлагаю так "невисокосный" -->voz', kudamb augotiše [[nellänz'päiv]]än.
+'''1885''' — järgeline <!-- предлагаю так "невисокосный" -->voz', kudamb augotiše [[nellänz'päiv]]än [[grigorianine kalendar'|grigorianižen kalendar]]in mödhe.
 
 == Aigtegod ==
 * [[22. keväz'ku]] — [[Pariž]]as om ozutadud [[Radajad lähttas "Lümjer"-fabrikaspäi|ezmäine fil'm]] kinematografan istorijas.
