*Empty MediaWiki Message*

--- a/8._reduku.mw
+++ b/8._reduku.mw
@@ -1,4 +1,4 @@
-'''8. reduku''' om voden 281-nz' päiv (282-nz' [[ližapäivvoz'|ližapäivvoziš]]) [[grigorianan kalendar'|grigorianan kalendariš]]. Voden lophusai jäb 84 päiväd.
+'''8. reduku''' om voden 281-nz' päiv (282-nz' [[ližapäivvoz'|ližapäivvoziš]]) [[Grigorianine kalendar'|grigorianižes kalendariš]]. Voden lophusai jäb 84 päiväd.
 
 == Sündnuded ==
 * [[1892]] — [[Cvetajeva Marina]] (kol. [[1941]]), venälaine i nevondkundalaine runokirjutai da kändai
