*Empty MediaWiki Message*

--- a/Uz'_Devätkino.mw
+++ b/Uz'_Devätkino.mw
@@ -11,6 +11,7 @@ Uden Devätkinon mödhe om nimitadud [[Fail:Spb metro line1.svg|27px|link=Кир
 {{stub}}
 
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Новое Девяткино]]
