*Empty MediaWiki Message*

--- a/Bugri_(Vsevoložskan_rajon).mw
+++ b/Bugri_(Vsevoložskan_rajon).mw
@@ -10,6 +10,7 @@ Se om [[Bugrin küläkund]]an administrativine keskuz. Eläjuden lugu — 6154 r
 
 {{stub}}
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[et:Bugrõ]]
