--- a/Priha.mw
+++ b/Priha.mw
@@ -1,4 +1,4 @@
-[[Fail:Folklórny súbor Čačina, Sanok 05.JPG|thumb|right|275px|Kaks' [[Slovakii|slovakijalašt]] prihad]]
+[[Fail:Folklórny súbor Čačina, Sanok 05.JPG|thumb|right|275px|Kaks' [[slovakijalaižed|slovakijalašt]] prihad]]
 '''Priha''' om nor' [[mez']].
 
 == Kacu mugažo ==
