*Empty MediaWiki Message*

--- a/Vaihišt.mw
+++ b/Vaihišt.mw
@@ -1,7 +1,37 @@
-'''Vaihišt''' om miččen-se kelen vaihiden ühtmuz. Vaihišt om kelen keskpala, se nimitab, formiruib i oigendab tedoid miččiš-se objektoiš vai nägusiš.
+'''Vaihišt''' om miččen-se [[kel'|kelen]] vaihiden ühtmuz. Vaihišt om kelen keskpala, se nimitab, formiruib i oigendab tedoid miččiš-se [[objekt]]oiš vai nägusiš.
 
 {{stub}}
 
 [[Kategorii:Vaihišt]]
 
+[[ar:معجم]]
+[[be:Лексіка]]
+[[be-x-old:Лексыка]]
+[[cv:Лексика]]
+[[da:Leksikon]]
+[[de:Grundwortschatz]]
+[[en:Lexicon]]
+[[eo:Leksiko]]
+[[es:Lexicón]]
+[[fa:واژگان]]
+[[fr:Lexique]]
+[[gl:Lexicón]]
+[[he:לקסיקון (בלשנות)]]
+[[hr:Leksikon]]
+[[hu:Alapszókincs]]
+[[id:Leksikon]]
+[[io:Lexiko]]
+[[it:Lessico]]
+[[kl:Leksikoni]]
+[[lt:Leksika]]
+[[mhr:Мутвундо]]
+[[ms:Leksikon]]
+[[nl:Kernlexicon]]
+[[nn:Ordforråd]]
+[[no:Leksikon]]
+[[pl:Leksykon]]
+[[pt:Léxico]]
 [[ru:Лексика]]
+[[sh:Leksikon]]
+[[sl:Leksikon]]
+[[uk:Лексика]]
