*Empty MediaWiki Message*

--- a/Kel'.mw
+++ b/Kel'.mw
@@ -1,5 +1,5 @@
 {{1000}}
-'''Kel'''' om znamine sistem, kaikiš kudamb märhapandud [[kirjutamine]] da/vai [[virkmine]].
+'''Kel'''' om znamine sistem, kudamb märhapandud [[kirjutamine]] da/vai [[virkmine]].
 
 Erištab:
 * [[Mail'man keled|Ristitližed keled]]
