*Empty MediaWiki Message*

--- a/Neičukaine.mw
+++ b/Neičukaine.mw
@@ -1,4 +1,4 @@
-[[Fail:PortraitGirl2005-2.jpg|thumb|right|275px|[[Portugalii|Portugalijalaine]] neičukaine]]
+[[Fail:PortraitGirl2005-2.jpg|thumb|right|275px|[[Portugalijalaižed|Portugalijalaine]] neičukaine]]
 '''Neičukaine''' om naižsugun [[laps']].
 
 == Kacu mugažo ==
