*Empty MediaWiki Message*

--- a/Siemens_A52.mw
+++ b/Siemens_A52.mw
@@ -1,2 +1,6 @@
+[[Fail:Siemens A52.jpg|thumb|right|250px|Siemens A52]]
+'''Siemens A52''' om [[2003]] voden [[Siemens]]:an mobiline telefon.
+{{stub}}
+
 [[pl:Siemens A52]]
 [[uk:Siemens A52]]
