*Empty MediaWiki Message*

--- a/Siemens_A52.mw
+++ b/Siemens_A52.mw
@@ -2,5 +2,8 @@
 '''Siemens A52''' om [[2003]] voden [[Siemens]]:an mobiline telefon.
 {{stub}}
 
+[[Kategorii:Mobiližed telefonad kirjamišton mödhe]]
+[[Kategorii:Siemens:an mobiližed telefonad]]
+
 [[pl:Siemens A52]]
 [[uk:Siemens A52]]
