*Empty MediaWiki Message*

--- a/Siemens_A52.mw
+++ b/Siemens_A52.mw
@@ -1,5 +1,5 @@
 [[Fail:Siemens A52.jpg|thumb|right|150px|Siemens A52]]
-'''Siemens A52''' om [[2003]] voden [[Siemens]]:an mobiline telefon.
+'''Siemens A52''' om [[2003]]-žen voden [[Siemens]]:an mujutoi mobiline telefon.
 {{stub}}
 
 [[Kategorii:Mobiližed telefonad kirjamišton mödhe]]
