*Empty MediaWiki Message*

--- a/Adam.mw
+++ b/Adam.mw
@@ -2,7 +2,8 @@
 '''Adam''' (evr.''אָדָם'', "mez’", "mez’kund"; arab. ''آدم'', "Rusked", "ma") on [[Biblii|Biblijan]] da [[Koran]]an mödhe ezmäine mez' kudamban Jumal tegi. Adam oli mez’kundan ezitat. [[Eva]]n mužik, Kainan, Avelin da Sifan tat. Jumal küksi Adaman Edeman saduspäi kundlematomuden tagut.       
 
 {{stub}}
-[[Kategorii:Religii]]
+[[Kategorii:Hristanuskond]]
+[[Kategorii:Islam]]
 
 [[ace:Adam]]
 [[ar:آدم]]
