*Empty MediaWiki Message*

--- a/Eva.mw
+++ b/Eva.mw
@@ -1,8 +1,9 @@
 [[Fail:Lucas Cranach d. Ä. 014.jpg|pisi|200px|Eva da kü]]
-'''Eva''' om [[Tora]]n, [[Biblii|Biblijan]] da [[Koran]]an mödhe ezmäine naine. [[Adam (ezmäine mez')|Adaman]] ak, kudamban Jumal oli tehnu Adaman kül’gespäi. Eva sai ičeze nimen Adamalpäi. [[Vanh Zavet|Vanhan Zavetan]] sanutesen mödhe kü maniti händast, miše hän söiži hüvüden i pahuden tedon pun plodud.
-
+'''Eva''' om [[Tora]]n, [[Biblii|Biblijan]] da [[Koran]]an mödhe ezmäine naine. [[Adam]]an ak, kudamban Jumal oli tehnu Adaman kül’gespäi. Eva sai ičeze nimen Adamalpäi. [[Vanh Zavet|Vanhan Zavetan]] sanutesen mödhe kü maniti händast, miše hän söiži hüvüden i pahuden tedon pun plodud.
 {{stub}}
-[[Kategorii:Religii]]
+
+[[Kategorii:Hristanuskond]]
+[[Kategorii:Islam]]
 
 [[ar:حواء]]
 [[az:Həvva]]
