--- a/MoRandi:n_diskografii.mw
+++ b/MoRandi:n_diskografii.mw
@@ -17,6 +17,9 @@ Se om täuz' '''[[MoRandi]]-kollektivan diskografii'''.
 # '''[[N3xt]]''' — 2007
 # '''[[Zebra]]''' — ???
 
+=== Kompiläcijad ===
+# ''Morandi — Best Of'' (2011)
+
 == Singlad ==
 # '''Love Me''' — 2004
 # '''Beijo''' — 2004
