*Empty MediaWiki Message*

--- a/MoRandi:n_diskografii.mw
+++ b/MoRandi:n_diskografii.mw
@@ -2,7 +2,7 @@
  | Al'bomad = 4
  | Singlad = 12
  | EP:id = 
- | Kompiläcijad = 
+ | Kompiläcijad = 1
  | Koncertižed al'bomad = 
  | DVD = 
  | Demod = 
@@ -18,7 +18,7 @@ Se om täuz' '''[[MoRandi]]-kollektivan diskografii'''.
 # '''[[Zebra]]''' — ???
 
 === Kompiläcijad ===
-# ''Morandi — Best Of'' (2011)
+# '''Morandi — Best Of''' (2011)
 
 == Singlad ==
 # '''Love Me''' — 2004
