--- a/Tualetvezi.mw
+++ b/Tualetvezi.mw
@@ -1,5 +1,5 @@
 [[Fail:Eau de toilette.JPG|thumb|right|250px|Meheližed tualetveded]]
-'''Tualetvezi''' ([[francijan kel'|franc.]]: ''Eau de toilette'') om [[hajuvezi|hajuveden]] kebn tip. [[Parfümerine kompozicii|Kompozicijan]] komcentracii — 4—10 %.
+'''Tualetvezi''' ([[francijan kel'|franc.]]: ''Eau de toilette'') om [[hajuvezi|hajuveden]] kebn tip. [[Parfümerine kompozicii|Kompozicijan]] koncentracii — 4—10 %.
 
 Haju varatab lühüd aigal (2—3 časud). Mäneb kävutandale kezal.
 {{stub}}
