Не понимаю смысл(( Важная система, которая определённая написание и/или произношение? М.б. определяет / соотносит?

--- a/Kel'.mw
+++ b/Kel'.mw
@@ -4,7 +4,7 @@
 Erištab:
 * [[Mail'man keled|Ristitližed keled]]
 * [[Programiruindan keled]]
-* [[Živatoid keled]]
+* [[Živatoiden keled]]
 {{stub}}
 
 [[Kategorii:Keled|!]]
