*Empty MediaWiki Message*

--- a/Tualetvezi.mw
+++ b/Tualetvezi.mw
@@ -1,15 +1,9 @@
 [[Fail:Eau de toilette.JPG|thumb|right|250px|Meheližed tualetveded]]
 '''Tualetvezi''' ([[francijan kel'|franc.]]: ''Eau de toilette'') om [[hajuvezi|hajuveden]] kebn tip. [[Parfümerine kompozicii|Kompozicijan]] koncentracii — 4—10 %.
 
-Haju varatab lühüd aigal (2—3 časud). Mäneb kävutandale kezal.
+Haju varadab lühüdan aigan (2—3 časud). Mäneb kävutandale kezal.
 {{stub}}
 
 [[Kategorii:Parfümerii]]
 
-[[de:Parfüm#Verdünnungsklassen]]
-[[en:Eau de toilette]]
-[[fr:Eau de toilette]]
-[[ml:യു ഡി ടോയിലെറ്റെ]]
-[[ro:Apă de toaletă]]
 [[ru:Туалетная вода]]
-[[uk:Туалетна вода]]
