Не уверен, правильно ли в данном случае с -le...

--- a/Pezendtuhk.mw
+++ b/Pezendtuhk.mw
@@ -1,5 +1,5 @@
 [[Fail:3 Sorten waschpulver.jpg|thumb|right|250px|Pezendtuhkad]]
-'''Pezendtuhk''' om pärj sintetine [[pezendabutuz]] sobidenpezule. Om [[kodihimii|kodihimijan]] abutuz.
+'''Pezendtuhk''' om pärj sintetine [[pezendabutuz]] sobidenpezun täht. Om [[kodihimii|kodihimijan]] abutuz.
 {{stub}}
 
 [[Kategorii:Kodihimii]]
