--- a/Prag.mw
+++ b/Prag.mw
@@ -39,6 +39,7 @@ File:Nationaltheater 2005-03-26 00.jpeg|[[Pragan rahvahan teatr|Rahvahan teatr]]
 [[Kategorii:Čehanman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
+{{Link FA|gl}}
 [[af:Praag]]
 [[ak:Prague]]
 [[am:ፕራግ]]
