--- a/Saharan_rahvahatoi_ma.mw
+++ b/Saharan_rahvahatoi_ma.mw
@@ -3,7 +3,7 @@
 '''Saharan rahvahatoi ma''', vai '''Sahar''' ([[araban kel'|arab.]]: ''صحراء''; [[francijan kel'|franc.]]: ''Sahara'') om kaikiš suremb [[rahvahatoi ma]] mail'mas.
 {{stub}}
 
-[[Kategorii:Rahvahatojad mad]]
+[[Kategorii:Rahvahatomed mad]]
 [[Kategorii:Saharan rahvahatoi ma]]
 
 [[af:Sahara]]
