--- a/Diamonds_Never_Made_a_Lady.mw
+++ b/Diamonds_Never_Made_a_Lady.mw
@@ -1,4 +1,4 @@
-'''«Diamonds Never Made a Lady»''' (''Brill'jantad ei čomitagoi ledid'') om Lift Up:an pajo da ühtennimine singl [[Bolen Diter|Diteran Bolenan]] avtorusel. Om mugažo pästtud Modern Talking:an «[[The 1st Album]]»-al'bomas 1985-žel vodel. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«Diamonds Never Made a Lady»''' (''Brill'jantad ei čomitagoi ledi'') om Lift Up:an pajo da ühtennimine singl [[Bolen Diter|Diteran Bolenan]] avtorusel. Om mugažo pästtud Modern Talking:an «[[The 1st Album]]»-al'bomas 1985-žel vodel. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
 {{Modern Talking}}
 
