*Empty MediaWiki Message*

--- a/Bolgarijan_kel'.mw
+++ b/Bolgarijan_kel'.mw
@@ -1,6 +1,6 @@
 [[Fail:Idioma búlgao-macedonio.PNG|250px|thumb|]]
 
-'''Bolgarijan kel''' ({{Lang-bg|български език}}) om [[Bolgarijalaižed|bolgarijalaižiden]] kel' ja  [[Bolgarii|Bolgarijan]] valdkundkel'. 
+'''Bolgarijan kel''' ({{Lang-bg|български език}}) om [[Bolgarijalaižed|bolgarijalaižiden]] kel' da  [[Bolgarii|Bolgarijan]] valdkundkel'. 
 Bolgarijan kel' om indoevropalaine, slavine kel'. Pagižijoiden lugu om 12.5 mil.
 
 *mužik — мъж
