*Empty MediaWiki Message*

--- a/Maid.mw
+++ b/Maid.mw
@@ -1,7 +1,7 @@
 [[Fail:Glass of milk on tablecloth.jpg|thumb|right|250px|Maidon stokan]]
-'''Maid''' om sötainozoluz; amundase [[imetaiživatad|imetaiživatoiden]] emän [[maidraug]]oiš. Maidon londuseline märičine — poigiden [[imetuz]].
+'''Maid''' om sötainozoluz; amundase [[imetaiživatad|imetaiživatoiden]] emän [[maidraug]]uiš. Maidon londuseline märičine — poigiden [[imetuz]].
 
-Maid mäneb äjiden produktoiden mülükundas. Sen tegend om järed [[tegimišt]]on sarak.
+Maid mäneb äjiden produktoiden mülükundaha. Sen tegend om järed [[tegimišt]]on sarak.
 {{stub}}
 
 [[Kategorii:Jomad]]
