*Empty MediaWiki Message*

--- a/Fotoapparat.mw
+++ b/Fotoapparat.mw
@@ -1,5 +1,5 @@
 [[Fail:Samsung FINO 30s.JPG|thumb|right|250px|[[Samsung FINO 30s]], tipine nügüd'aigaine fotoapparat]]
-'''Fotoapparat''' om elektrine ladim, kudamb ozutab likumatomed [[kuva|kuviden]] satandan da fiksacijan täht [[vaukuz|vauktused]] abul.
+'''Fotoapparat''' om elektrine ladim likumatomiden [[kuva|kuviden]] satandan da fiksacijan täht [[vaukuz|vauktusen]] abul.
 {{stub}}
 
 [[Kategorii:Fotoapparatad|*]]
