--- a/Maid.mw
+++ b/Maid.mw
@@ -1,5 +1,5 @@
 [[Fail:Glass of milk on tablecloth.jpg|thumb|right|250px|Maidon stokan]]
-'''Maid''' om sötainozoluz; amundase [[imetaiživatad|imetaiživatoiden]] emän [[maidraug]]uiš. Maidon londuseline märičine — poigiden [[imetuz]].
+'''Maid''' om sötainozoluz; amundase [[imetaiživatad|imetaiživatoiden]] emän [[maidraug]]uišpäi. Maidon londuseline märičine — poigiden [[imetuz]].
 
 Maid mäneb äjiden produktoiden mülükundaha. Sen tegend om järed [[tegimišt]]on sarak.
 {{stub}}
