--- a/Zerkol.mw
+++ b/Zerkol.mw
@@ -1,5 +1,5 @@
 [[Fail:Palazzo mansi, scale 03 specchio.JPG|thumb|right|250px|Tipine zerkol]]
-'''Zerkol''' om siled pind (tobjimalaz nece om [[stökol]]), kudambas kuvastub vauktuz vai toine [[sädegoičend]].
+'''Zerkol (zirkul)''' om siled pind (tobjimalaz nece om [[stökol]]), kudambas kuvastub vauktuz vai toine [[sädegoičend]].
 {{stub}}
 
 [[Kategorii:Geometrine optik]]
