Название - от вымершего языка под названием "мура". Не уверена, что нужно окончание на -ine.

--- a/Pirahanan_kel'.mw
+++ b/Pirahanan_kel'.mw
@@ -1,7 +1,7 @@
 {{tärtused|Pirah}}
 '''Pirah''' (''xapaitíiso'') om [[pirah (rahvaz)|pirahan rahvahan]] kel', üks' [[Suviamerikan indejan keled|suviamerikan indejan kelišpäi]]. Necel kelel pagištas [[Brazilii|Brazilijas]]; pagižijoiden lugu om läz 420 ristitud (mamankel').
 
-Pirah om [[izoliruidud keled|izoliruidud kel']]: se om üks'jäine eläb [[muranižed keled|muranižen kel'kanzan]] kel'. Kirjkel' om [[latinan kirjamišt]]on pohjal.
+Pirah om [[izoliruidud keled|izoliruidud kel']]: se om üks'jäine eläb [[muranan keled|muranan kel'kanzan]] kel'. Kirjkel' om [[latinan kirjamišt]]on pohjal.
 
 Nece kel' om unikaline, sikš miše siš ei ole [[luguvajeh|luguvaihid]]. Heiden sijas kelel oma kaks' definicijad: «vähä» ([[1 (lugu)|1]] — [[4 (lugu)|4]]) da «äi» ([[5 (lugu)|5]] da enamba). Edel keles ei olend [[Personaližed pronominad|personaližed pronominoid]] (nügüd'läižed pronominad oma velgsanad [[tupi (kel')|tupi]]-kelišpäi). Kelen [[leksik]] om primitivine (ozutesikš, siš ei ole [[muju]]n kategorijad). 
 
