...вообще-то это все актёры, если не считать чувака в коме))

--- a/Surmanvänd.mw
+++ b/Surmanvänd.mw
@@ -6,10 +6,9 @@
 * [[Marsters Džeims|Džeims Marsters]] — ''Džek Dillon''
 * Mark Uinnik — ''Čarli''
 * [[Nataša Alam]] — ''Amber Dajan Makkormik''
-* Dianna Nikol' Bekster — Steisi Gibson
-* Ričard Viten — Deiv
-* Dženni Ford — Melissa Taker
-da toižed.
+* Dianna Nikol' Bekster — ''Steisi Gibson''
+* Ričard Viten — ''Deiv''
+* Dženni Ford — ''Melissa Taker''
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
