*Empty MediaWiki Message*

--- a/600_sekundad.mw
+++ b/600_sekundad.mw
@@ -4,7 +4,7 @@ Kümnes minutas vedai (tobjimalaz nece oli [[Nevzorov Aleksandr|Aleksandr Nevzor
 
 {{stub}}
 
-[[Kategorii:TV-oigenduses]]
+[[Kategorii:TV-oigendused]]
 [[Kategorii:Videnz' kanal]]
 
 [[ru:600 секунд]]
