Так лучше, я думаю

--- a/Isinbajeva_Jelena.mw
+++ b/Isinbajeva_Jelena.mw
@@ -1,5 +1,5 @@
 [[Fail:Yelena Isinbayeva Doha 2010.jpg|thumb|right|230px|Jelena Isinbajeva]]
-'''Jelena Gadžijevna Isinbajeva''' ([[Venäkel'|ven.]] ''Елена Гаджиевна Исинбаева'', sünd. [[3. kezaku]] [[1982]], [[Volgograd]]) om [[Venäma|venälaine]] sportnik, [[hüppind anšpuganke|hüppii anšpuganke]], kaks'kerdaine olimpine čempion (2004, 2008), [[Kezaolimpiad-2012|Kezaolimpiadan 2012]] bronzvägestai.
+'''Jelena Gadžijevna Isinbajeva''' ([[Venäkel'|ven.]] ''Елена Гаджиевна Исинбаева'', sünd. [[3. kezaku]] [[1982]], [[Volgograd]]) om [[Venäma|venälaine]] sportmez', [[hüppind anšpuganke|hüppii anšpuganke]], kaks'kerdaine olimpine čempion (2004, 2008), [[Kezaolimpiad-2012|Kezaolimpiadan 2012]] bronzvägestai.
 
 Jelena seižuti 28 mail'man rekordad hüppindas anšpuganke naižiden keskes.
 
@@ -8,7 +8,7 @@ Jelena seižuti 28 mail'man rekordad hüppindas anšpuganke naižiden keskes.
 
 {{stub}}
 
-[[Kategorii:Sportnikad]]
+[[Kategorii:Sportmehed]]
 
 [[ar:يلينا ايزينبايفا]]
 [[az:Yelena İsinbayeva]]
