*Empty MediaWiki Message*

--- a/Vilämovicen_kel'.mw
+++ b/Vilämovicen_kel'.mw
@@ -1,4 +1,4 @@
-'''Vilämovicen kel'''' (''Wymysiöeryś'') om germanižen gruppan [[indoevropižed keled|indoevropine kel']]. Kelel pagištas [[Vilämovice]]s ([[Pol'šanma]]).
+'''Vilämovicen kel'''' (''Wymysiöeryś'') om germanižen gruppan [[indoevropižed keled|indoevropine kel']]. Kelel pagištas vaiše [[Vilämovice]]s ([[Pol'šanma]]).
 
 Pagižijoiden lugu om läz 70 ristitud (mamankel'). Vilämovicen kirjkel' om [[latinan kirjamišt]]on pohjal.
 
