*Empty MediaWiki Message*

--- a/Päivnouzfrizan_kel'.mw
+++ b/Päivnouzfrizan_kel'.mw
@@ -1,4 +1,4 @@
-'''Päivnouzfrizan kel'''' vai '''Zaterlandan kel'''' (''Seeltersk'', ''Seelterfräiske'') om germanižen gruppan [[indoevropižed keled|indoevropine kel']]. Kelel pagištas [[Zaterland]]as ([[Saksanma]]).
+'''Päivnouzfrizan kel'''' vai '''Zaterlandan kel'''' (''Seeltersk'', ''Seelterfräiske'') om germanižen gruppan [[indoevropižed keled|indoevropine kel']]. Kelel pagištas vaiše [[Zaterland]]as ([[Saksanma]]).
 
 Pagižijoiden lugu om läz 2,000 ristitud (mamankel'). Päivnouzfrizan kirjkel' om [[latinan kirjamišt]]on pohjal.
 
