--- a/Mesill.mw
+++ b/Mesill.mw
@@ -27,4 +27,5 @@ Pind om läz 14 km². Lidnan eläjiden lugu om 2,196 ristituid (2010).
 [[fr:Mesilla]]
 [[nl:Mesilla]]
 [[pt:Mesilla (Novo México)]]
+[[roa-rup:Mesilla]]
 [[vo:Mesilla]]
