--- a/Sent_Antoni_Villadž.mw
+++ b/Sent_Antoni_Villadž.mw
@@ -30,6 +30,7 @@ Lidnan pämez' om Džerri Fost.
 [[nl:St. Anthony (Minnesota)]]
 [[pl:St. Anthony (Minnesota)]]
 [[pt:St. Anthony (Minnesota)]]
+[[roa-rup:Saint Anthony Village]]
 [[ru:Сент-Антони-Виллидж (город, Миннесота)]]
 [[vi:St. Anthony, Minnesota]]
 [[vo:St. Anthony Village]]
