--- a/Mirandan_kel'.mw
+++ b/Mirandan_kel'.mw
@@ -1,4 +1,4 @@
-[[Fail:Linguistic map of asturian es.svg|thumb|220px|[[Ispanijan kel'|Ispanijankel'ne]] levigandusen kart]]
+[[Fail:Linguistic map of asturian es.svg|thumb|220px|[[Ispanijan kel'|Ispanijankel'ne]] levigandusen kart. Mirandan kel' om rustten mujul.]]
 '''Mirandan kel'''' (''Lhéngua mirandesa'') om üks' ibero-romanižiš, indoevropalaižiš kelišpäi.
 
 Se om [[Portugalii|Portugalijan]] valdkundkel'. Pagižijoiden lugu om läz 15,000 rist.
