*Empty MediaWiki Message*

--- a/Venäman_avtonomerad.mw
+++ b/Venäman_avtonomerad.mw
@@ -1,5 +1,5 @@
 [[Fail:License plate in Russia 2.svg|400px|right]]
-'''[[Avtonomerad|Avtonomerden]] indeks [[Venäma]]s''':
+'''[[Avtonomerad|Avtonomeriden]] indeks [[Venäma]]s''':
 {| class=prettytable
 ! align=center | '''Kod'''
 ! '''Region'''
