*Empty MediaWiki Message*

--- a/Armenijan_kel'.mw
+++ b/Armenijan_kel'.mw
@@ -2,7 +2,7 @@
 
 Se om [[Armenii|Armenijan]] valdkundkel'. Pagižijoiden lugu om läz 6 millionad rist.
 
-Armenijan kirjkel' om ereline [[Armenijan kirjamišt|armenijan kirjamišton]] pohjal.
+Armenijan kirjkel' om eriline [[Armenijan kirjamišt|armenijan kirjamišton]] pohjal.
 {{stub}}
 
 [[Kategorii:Keled]]
