--- a/Bangladešan_tak.mw
+++ b/Bangladešan_tak.mw
@@ -1,3 +1,4 @@
+[[Fail:Bd coins.jpg|thumb|right|275px|Paisad]]
 '''Bangladešan tak''' ([[bengalan kel'|beng.]]: ''বাংলাদেশী টাকা'') om [[Bangladeš]]an valdkundvalüt.
 
 1 tak = 100 paisad (''পয়সা''). Valütkod om ''BDT''.
