*Empty MediaWiki Message*

--- a/Neglik.mw
+++ b/Neglik.mw
@@ -1,6 +1,9 @@
 [[Fail:Erinaceus europaeus LC0119.jpg|pisi|300px|Neglik]]
 '''Neglik''' (lat. ''Erinaceus europaeus'') om [[živat]].
 
+== Mel'hetartuižed faktad ==
+* Om levedali tetab mel'pideg, miše neglikod pukstas ičeze negloihe sömäd (ozutesikš — [[jablok]]oid). Nece om petustuz, hot' erašti ned todas-ki ičeze pezaha negloiš lehtesid.
+
 {{stub}}
 [[Kategorii:Živatad]]
 [[Kategorii:Imetaiživatad]]
