*Empty MediaWiki Message*

--- a/Jablokpu.mw
+++ b/Jablokpu.mw
@@ -1,6 +1,8 @@
 [[File:Appletree bloom l.jpg|thumb|right|250px|Jablokpu]]
 '''Jablokpu''' ({{kel’+la|Malus}}) om [[Pu|plodpu]].
 
+Jablokpun ploduid kuctas [[jablok]]oikš.
+
 {{DEFAULTSORT:Jablokpu}}
 {{stub}}
 
