*Empty MediaWiki Message*

--- a/MoRandi.mw
+++ b/MoRandi.mw
@@ -22,6 +22,7 @@
 * ''[[N3xt]]'' (2007)
 * ''[[Zebra]]'' (—)
 {{stub}}
+{{MoRandi}}
 
 [[Kategorii:Evropopgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
