*Empty MediaWiki Message*

--- a/Mind_Fields.mw
+++ b/Mind_Fields.mw
@@ -22,6 +22,7 @@
 # ''Ocean's Vibe Chill Out'' (6:52)
 # ''Sun Light (Outro)'' (2:24)
 {{stub}}
+{{MoRandi}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:MoRandi]]
