*Empty MediaWiki Message*

--- a/Moga_Marius.mw
+++ b/Moga_Marius.mw
@@ -1,5 +1,6 @@
 '''Marius Moga''' (sünd. [[30. tal'vku]] [[1981]], [[Alba Julii]], [[Romanii]]) om romanijalaine pajatai, prodüser da muzikankirjutai, [[MoRandi]]-kollektivan ühtnii.
 {{stub}}
+{{MoRandi}}
 
 [[Kategorii:MoRandi]]
 [[Kategorii:Pajatajad kirjamišton mödhe]]
