*Empty MediaWiki Message*

--- a/N3xt.mw
+++ b/N3xt.mw
@@ -16,6 +16,7 @@
 # ''Love Is Tickling'' (3:46)
 # ''Reality & Dreams (feat. Lisa Wassabi)'' (4:36)
 {{stub}}
+{{MoRandi}}
 
 [[Kategorii:Al'bomad kirjamišton mödhe]]
 [[Kategorii:MoRandi]]
