*Empty MediaWiki Message*

--- a/Kalininan_rajon_(Piter).mw
+++ b/Kalininan_rajon_(Piter).mw
@@ -8,6 +8,7 @@
 * [http://kalinspb.ru/ Kalininan rajonan informacine portal]
 * [http://www.mr-spb.ru/story/kalinin/ Kalininan rajonan uzištused]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
