*Empty MediaWiki Message*

--- a/Kolpinon_rajon.mw
+++ b/Kolpinon_rajon.mw
@@ -9,6 +9,7 @@ Rajonan administracii sijadase [[Kolpino]]-lidnas, sišpäi om rajonan nimi.
 == Irdkosketused ==
 [http://www.gov.spb.ru/gov/admin/terr/reg_kolpino Kolpinon rajonan administracijan lehtpol' Piterin ohjadusen saital]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
