--- a/Krasnogvardeiskii_rajon_(Piter).mw
+++ b/Krasnogvardeiskii_rajon_(Piter).mw
@@ -7,6 +7,7 @@
 == Irdkosketused ==
 * [http://rjevka-spb.ru/ Krasnogvardeiskijan rajonan informacine portal]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
