*Empty MediaWiki Message*

--- a/Kronštadtan_rajon.mw
+++ b/Kronštadtan_rajon.mw
@@ -9,6 +9,7 @@ Kogoneb vaiše ühtes municipaližes ühtnikas — [[Kronštadt]]-lidnaspäi.
 == Irdkosketused ==
 * [http://www.nash-kronshtadt.ru/ Kronštadtan rajonan administracijan informacine portal]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
