*Empty MediaWiki Message*

--- a/Nevan_rajon.mw
+++ b/Nevan_rajon.mw
@@ -9,6 +9,7 @@
 * [http://www.nevainfo.ru/ Nevan rajonan informacine portal]
 * [http://old.mr7.ru/regnews/12/ Nevan rajonan uzištused i aigtegod]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
