*Empty MediaWiki Message*

--- a/Merenrandaine_rajon_(Piter).mw
+++ b/Merenrandaine_rajon_(Piter).mw
@@ -9,6 +9,7 @@
 * [http://www.mr7.ru/regnews/15/ Merenrandaine rajonan uzištused]
 * [http://www.primorsky-spb.ru Merenrandaine rajonan informacine portal]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
