*Empty MediaWiki Message*

--- a/Frunzen_rajon_(Piter).mw
+++ b/Frunzen_rajon_(Piter).mw
@@ -10,6 +10,7 @@ Rajonan istorine keskuz om [[Kupčino]].
 * [http://www.frunzspb.ru/ Rajonan oficialine sait]
 * [http://www.kupchino.info/ "Kupčino"-internetlehtez]
 
+{{Piter}}
 {{stub}}
 
 [[Kategorii:Piter]]
