--- a/Skabbija_Kristina.mw
+++ b/Skabbija_Kristina.mw
@@ -1,6 +1,7 @@
 [[Fail:Cristina Scabbia LC.jpg|thumb|right|250px|Kristina Skabbija]]
 '''Kristina Adriana K'jara Skabbija''' ([[italijan kel'|ital.]]: ''Cristina Adriana Chiara Scabbia''; sünd. [[6. kezaku]] [[1972]], [[Milan (lidn)|Milan]], [[Italii]]) om italijalaine pajatai da lehtezmez', [[Lacuna Coil]]-kollektivan solist.
 {{stub}}
+{{Lacuna Coil}}
 
 [[Kategorii:Lacuna Coil]]
 [[Kategorii:Italijan pajatajad]]
