*Empty MediaWiki Message*

--- a/Lacuna_Coil.mw
+++ b/Lacuna_Coil.mw
@@ -10,6 +10,7 @@
 * ''[[Shallow Life]]'' (2009)
 * ''[[Dark Adrenaline]]'' (2012)
 {{stub}}
+{{Lacuna Coil}}
 
 [[Kategorii:Lacuna Coil|*]]
 [[Kategorii:Gotikmetalgruppad]]
