--- a/Lacuna_Coil:an_diskografii.mw
+++ b/Lacuna_Coil:an_diskografii.mw
@@ -52,6 +52,7 @@ Se om tauz' '''[[Lacuna Coil]]-kollektivan diskografii'''.
 
 == Kacu mugažo ==
 * [[Lacuna Coil:an pajod]]
+{{Lacuna Coil}}
 
 [[Kategorii:Lacuna Coil|D]]
 [[Kategorii:Diskografijad]]
