*Empty MediaWiki Message*

--- a/Lurkmore.to.mw
+++ b/Lurkmore.to.mw
@@ -1,7 +1,7 @@
-[[Fail:Lurkmore.ru logo.png|right|250px]]
-'''lurkmore.to''', vai '''Venän larkmoar''' ([[venäkel'|ven.]]: ''Русское Луркоморье'', [[anglijan kel'|angl.]]: ''Russian Lurkmore'') om jumoristine sait, kaikiš ümbrikirjutab ičtaze kut „internet-subkul'turiden, fol'kloran da [[internet-mem]]an enciklopedii“.
+[[Fail:Lurkmore.ru logo.png|right|200px]]
+'''lurkmore.to''', vai '''Venän larkmoar''' ([[venäkel'|ven.]]: ''Русское Луркоморье'', [[anglijan kel'|angl.]]: ''Russian Lurkmore'') om jumoristine sait, kudamb ümbrikirjutab ičtaze kut „internet-subkul'turiden, fol'kloran da [[internet-mem|internet-memiden]] enciklopedii“.
 
-Kirjutusiden lugu om 5,552 (31. heinkun 2011). Se om üks' populärižiš [[Venäma]]n saitašpäi.
+Kirjutusiden lugu om 5,552 (7. uhoku 2012). Se om üks' populärižiš [[Venäma]]n saitoišpäi.
 
 Edeline internet-adres oli ''lurkmore.ru'' .
 {{stub}}
