*Empty MediaWiki Message*

--- a/Fly_To_The_Moon.mw
+++ b/Fly_To_The_Moon.mw
@@ -1,4 +1,4 @@
-'''«Fly To The Moon»''' (''Leta kudmaižeho'') om tetab pajo [[Modern Talking]]:an «[[Year of the Dragon]]»-al'bomas.
+'''«Fly To The Moon»''' (''Leta kudmaižeho'') om tetab pajo [[Modern Talking]]:an «[[Year of the Dragon]]»-al'bomas. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
 {{Modern Talking}}
 
