*Empty MediaWiki Message*

--- a/Lernu!.mw
+++ b/Lernu!.mw
@@ -1,13 +1,13 @@
 [[Fail:Lernu.net emblemo.jpg|thumb|right|200px|Lernu!:n logotip]]
-'''Lernu!''' (vai '''lernu.net''') om äikeline sait [[esperanto]]-internacionaližen kelen opendusen täht. Sil voib löuta informacijad esperanton polhe, opeta kel' erazvuiččiden kursoiden abul, kävutada grammatikan ümbrikacund i interaktivižed harjoitused, antta ekzamenad, väta fleš-vändoiš, lugeda i kundelta starinad esperantoks, ümbripagišta erazvuiččed temad forumoil, kävutada vajehnikad, vajehtadas tedotusil toižiden mehidenke, kudambad mugažo tarttas melel esperantoho, kundelta muzik i kacta lühüdad fil'mad esperantoks.
+'''Lernu!''' (vai '''lernu.net''') om äikeline [[sait]] [[esperanto]]-internacionaližen kelen opendusen täht. Sil voib löuta informacijad esperanton polhe, opeta kel' erazvuiččiden kursoiden abul, kävutada grammatikan ümbrikacund i interaktivižed harjoitused, antta ekzamenad, väta fleš-vändoiš, lugeda i kundelta starinad esperantoks, ümbripagišta erazvuiččed temad forumoil, kävutada vajehnikad, vajehtadas tedotusil toižiden mehidenke, kudambad mugažo tarttas melel esperantoho, kundelta muzik i kacta lühüdad fil'mad esperantoks.
 
 Sana ''lernu'' esperantoks znamoičeb ''"Openda"''.
-
-{{stub}}
 
 == Irdkosketused ==
 
 * [http://ru.lernu.net/ Äikeline sait esperanton opendusen täht ''lernu!'']
+
+{{stub}}
 
 [[Kategorii:Esperanto]]
 [[Kategorii:Saitad]]
