--- a/Modern_Talking:an_pajod.mw
+++ b/Modern_Talking:an_pajod.mw
@@ -113,8 +113,8 @@ Se om t√§uz' '''[[Modern Talking]]-kollektivan pajoiden kirjutez''' pordoiden m√
 # '''''For a Life Time''''' (America)
 # '''''From Coast to Coast''''' (America)
 # '''''There's Something in the Air''''' (America)
-# '''''I Need You Now''''' (America)
-# '''''New York City Girl''''' (America)
+# '''''[[I Need You Now]]''''' (America)
+# '''''[[New York City Girl]]''''' (America)
 # '''''Send Me a Letter from Heaven''''' (America)
 # '''''[[Ready for the Victory]]''''' ([[Victory]])
 # '''''I'm Gonna Be Strong''''' (Victory)
@@ -123,8 +123,8 @@ Se om t√§uz' '''[[Modern Talking]]-kollektivan pajoiden kirjutez''' pordoiden m√
 # '''''Higher than Heaven''''' (Victory)
 # '''''You're Not Lisa''''' (Victory)
 # '''''When the Sky Rained Fire''''' (Victory)
-# '''''Summer in December''''' (Victory)
-# '''''10 Seconds to Countdown''''' (Victory)
+# '''''[[Summer in December]]''''' (Victory)
+# '''''[[10 Seconds to Countdown]]''''' (Victory)
 # '''''Love to Love You''''' (Victory)
 # '''''Blue Eyed Coloured Girl''''' (Victory)
 # '''''We Are the Children of the World''''' (Victory)
