*Empty MediaWiki Message*

--- a/Turkanma.mw
+++ b/Turkanma.mw
@@ -15,6 +15,8 @@
 |}
 '''Turcii''' ([[Turkan kel'|turkan]]: ''Türkiye'') — valdkund [[Evropa]]s. Eläjiden lugu — 72,5 mln. Pind — 780 580 km<sup>2</sup>. Ohjandusen form om Prezidentine tazovaldkund.
 
+Pälidn om [[Ankar]], kaiked suremb lidn — [[Stambul]].
+
 == Istorii ==
 
 == Politine sistem ==
