--- a/Turkanma.mw
+++ b/Turkanma.mw
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:Turkey in its region.svg|300px]]
 |}
-'''Turcii''' ([[Turkan kel'|turkan]]: ''Türkiye'') — valdkund [[Evropa]]s. Eläjiden lugu — 72,5 mln. Pind — 780 580 km<sup>2</sup>. Ohjandusen form om Prezidentine tazovaldkund.
+'''Turcii''' ([[Turkan kel'|turkan kelel]]: ''Türkiye'') — valdkund [[Evropa]]s. Eläjiden lugu — 72,5 mln. Pind — 780 580 km<sup>2</sup>. Ohjandusen form om Prezidentine tazovaldkund.
 
 Pälidn om [[Ankar]], kaiked suremb lidn — [[Stambul]].
 
