*Empty MediaWiki Message*

--- a/Kazahan_kel'.mw
+++ b/Kazahan_kel'.mw
@@ -51,7 +51,7 @@
 | Ю ю
 | Я я
 |}
-'''Kazahan kel’''' (kaz.: ''қазақ тілі'') om altaižen kel'kanzan kel'. Kazahan kel' om [[Kazahstan]]an valdkundkel'. Pagižijoiden lugu — 10 mil.
+'''Kazahan kel’''' (kaz.: ''қазақ тілі'') om [[Altaižed keled|altaižen]] kel'kanzan kel'. Kazahan kel' om [[Kazahstan]]an valdkundkel'. Pagižijoiden lugu — 10 mil.
 
 == Irdkosketused ==
 * [http://www.ethnologue.com/show_language.asp?code=kaz Ethnologue]
