*Empty MediaWiki Message*

--- a/Totaran_kel'.mw
+++ b/Totaran_kel'.mw
@@ -1,6 +1,6 @@
 [[Fail:Söyälmäskä.jpg|200px|thumb|Kaks'kel'ne znam [[Kazanin metropoliten|Kazanin metros]]]]
 [[Fail:Kazan metro sign.JPG|thumb|right|200px|Kaks'kel'ne znam [[Kazanin metropoliten|Kazanin metros]]]]
-'''Totaran kel'''' (tot.: ''татар теле'', ''tatar tele'') om [[Altaižen keled|altaižen kel'kanzan]] kel' ([[Türkan keled|türkan]] grupp, kipčakan alagrupp). Totaran kel' om [[Tatarstanan Tazovaldkund]]an oficialine kel'. Pagižijoiden lugu — 6,5 mil.
+'''Totaran kel'''' (tot.: ''татар теле'', ''tatar tele'') om [[Altaižed keled|altaižen kel'kanzan]] kel' ([[Türkan keled|türkan]] grupp, kipčakan alagrupp). Totaran kel' om [[Tatarstanan Tazovaldkund]]an oficialine kel'. Pagižijoiden lugu — 6,5 mil.
 
 == Paginad ==
 Totaran keles om koume paginad: mišarin pagin, kazanin pagin da sibirin pagin.
