*Empty MediaWiki Message*

--- a/Esperanto.mw
+++ b/Esperanto.mw
@@ -1,4 +1,4 @@
-[[Fail:Flag of Esperanto.svg|thumb|right|250px|Esperanton flag]]
+[[Fail:Flag of Esperanto.svg|thumb|right|225px|Esperanton flag]]
 '''Esperanto''' om [[Ratud keled|ratud]] rahvahidenkeskeine kel'.
 
 Se om ratud vl [[1887]], tegii — [[Varšav|varšavalaine]] okulist [[Zamengof Lüdvig|Lüdvig Zamengof]].
@@ -8,5 +8,6 @@ Pagižijoiden lugu ei ole sel'ged, se om 100 tuhaspäi 2 millionhasai ristitud.
 {{stub}}
 
 [[Kategorii:Keled]]
+[[Kategorii:Esperanto]]
 
 [[ru:Эсперанто]]
