*Empty MediaWiki Message*

--- a/Die_Streuner.mw
+++ b/Die_Streuner.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://www.streuner.de/
 }}
-'''Die Streuner''' (veps. ''kalikad'') om [[Germanii|germanijalaine]] muzikgrupp [[Bonn]]aspäi, kudamb edestab muzikad [[Folkmuzik|Folk]]- da [[keskaigaine muzik]]-stiliš.
+'''«Die Streuner»''' (veps. ''kalikad'') om [[Germanii|germanijalaine]] muzikgrupp [[Bonn]]aspäi, kudamb edestab muzikad [[Folkmuzik|Folk]]- da [[keskaigaine muzik]]-stiliš.
 
 == Mülükund ==
 * Pinto der Schäfer (Carsten Hickstein)
