*Empty MediaWiki Message*

--- a/Die_Ärzte.mw
+++ b/Die_Ärzte.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Sahnie (1982-1986), The Incredible Hagen (1986–1989)
  | Sait = http://www.bademeister.com/
 }}
-'''Die Ärzte''' ("lekarid") om [[Germanii|germanijalaine]] [[Pankrok|pankrokgrupp]] [[Berlin]]aspäi.
+'''«Die Ärzte»''' ("lekarid") om [[Germanii|germanijalaine]] [[Pankrok|pankrokgrupp]] [[Berlin]]aspäi.
 
 == Mülükund ==
 * Farin Urlaub (Jan Ulrich Max Vetter)
