*Empty MediaWiki Message*

--- a/Fun_Factory.mw
+++ b/Fun_Factory.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Balja, Marie-Anett Mey, Toni Cottura, Stephan Browarczyk, Rodney Hardison, Annett Möller, T-Roc, Al Walser
  | Sait = http://www.fun-factory.de/
 }}
-'''Fun Factory''' om [[Saksanma|sakslaine]] evrodensgrupp [[1993]]. vlpäi. Mülükund oma ''Douglas'', ''Diana'' da ''DGS''.
+'''«Fun Factory»''' om [[Saksanma|sakslaine]] evrodensgrupp [[1993]]. vlpäi. Mülükund oma ''Douglas'', ''Diana'' da ''DGS''.
 
 == Diskografii ==
 
