*Empty MediaWiki Message*

--- a/Glittertind.mw
+++ b/Glittertind.mw
@@ -1,5 +1,5 @@
 [[Fail:Sandvik_-_Landkjenning_-_2009.jpg|thumb|300px|Torbjørn Sandvik - gruppan alusenpanii da vokalist]]
-'''Glittertind''' om [[Norvegii|norvegijalaine]] muzikgrupp, kudamb edestab folk/viking-metal-, viking-rok- da hard-rok-žanroiš.
+'''«Glittertind»''' om [[Norvegii|norvegijalaine]] muzikgrupp, kudamb edestab folk/viking-metal-, viking-rok- da hard-rok-žanroiš.
 
 == Diskografii ==
 *Mellom bakkar og berg (demo) (2002)
