*Empty MediaWiki Message*

--- a/In_Extremo.mw
+++ b/In_Extremo.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Thomas Der Münzer, Die Rote Füchsin, Sen Pusterbalg, Der Morgenstern
  | Sait = http://www.inextremo-fanclub.de
 }}
-'''In Extremo''' om [[Germanii|germanijalaine]] muzikgrupp [[Berlin]]aspäi, kudamb edestab muzikad [[Neue Deutsche Härte]], [[keskaigaine metal]] da [[folkmetal]]-stiliš.
+'''«In Extremo»''' om [[Germanii|germanijalaine]] muzikgrupp [[Berlin]]aspäi, kudamb edestab muzikad [[Neue Deutsche Härte]], [[keskaigaine metal]] da [[folkmetal]]-stiliš.
 
 == Mülükund ==
 * Das letzte Einhorn (Michael Robert Rhein)
