--- a/Saksan_kel'.mw
+++ b/Saksan_kel'.mw
@@ -1,7 +1,7 @@
 {{1000}}
 [[Fail:Vereinfachte Ausgangsschrift.png|right|thumb|250px|Saksan kirjamišt]]
 [[Fail:Deutsche_Dialekte.PNG|400px|right|thumb|Dialektan]]
-'''Saksan kel'''' (saks.: ''Deutsch, deutsche Sprache'') om valdkundkel’ [[Saksanma]]s, [[Avstrii|Avstrijas]], [[Lihtenštein]]as, [[Šveicarii|Šveicarijas]], [[Belgii|Belgijas]] da [[EÜ]]:s. Pagižijoiden lugu — 90 mil.
+'''Saksan kel'''', vai '''germanijan kel'''' (''Deutsch, deutsche Sprache'') om valdkundkel’ [[Saksanma]]s, [[Avstrii|Avstrijas]], [[Lihtenštein]]as, [[Šveicarii|Šveicarijas]], [[Belgii|Belgijas]] da [[EÜ]]:s. Pagižijoiden lugu — 90 mil.
 
 [[Kategorii:Keled]]
 
