--- a/Joy.mw
+++ b/Joy.mw
@@ -1,5 +1,5 @@
 [[Fail:Joy Band.jpg|pisi|250px|Joy]]
-'''Joy''' om [[Avstrii|avstrijalaine]] [[sintipop]]grupp. Mülükund om ''Freddi Jaklič'', ''Manfred Temmel<nowiki>'</nowiki>'' da ''Endi Švaicer''.
+'''«Joy»''' om [[Avstrii|avstrijalaine]] [[sintipop]]grupp. Mülükund om ''Freddi Jaklič'', ''Manfred Temmel<nowiki>'</nowiki>'' da ''Endi Švaicer''.
 
 == Diskografii ==
 
