*Empty MediaWiki Message*

--- a/Keväz'vezi.mw
+++ b/Keväz'vezi.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = 
 }}
-'''Keväz'vezi''' om [[vepsläižed|vepsän]] folkmuzikgrupp [[Petroskoi]]špäi (vspäi 1999.).
+'''«Keväz'vezi»''' om [[vepsläižed|vepsän]] folkmuzikgrupp [[Petroskoi]]špäi (vspäi 1999.).
 
 Kollektivas om 9 ühtnijad. Čomamahtoine ohjandai — Svetlana Kosireva.
 
