*Empty MediaWiki Message*

--- a/Knorkator.mw
+++ b/Knorkator.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Tim Buktu, Chrisch Chrasch, J. Kirk Thiele, Thomas Görsch
  | Sait = http://www.knorkator.de/
 }}
-'''Knorkator''' om [[Germanii|germanijalaine]] muzikgrupp [[Berlin]]aspäi, kudamb edestab muzikad [[Neue Deutsche Härte]]-stiliš, no komedižen i jumoristižen lirikanke.
+'''«Knorkator»''' om [[Germanii|germanijalaine]] muzikgrupp [[Berlin]]aspäi, kudamb edestab muzikad [[Neue Deutsche Härte]]-stiliš, no komedižen i jumoristižen lirikanke.
 
 Gruppan nimi om tehtud ''"knorke"''-sanaspäi, kudamb znamoičeb "lujas hüvä" vai "čoma" Berlinan slengal .
 
