*Empty MediaWiki Message*

--- a/Korol'_i_Šut.mw
+++ b/Korol'_i_Šut.mw
@@ -1,5 +1,5 @@
 [[Fail:Король и шут Рок над Волгой 2011.JPG|pisi|300px|"Korol’ i Šut" koncertan aigan]]
-'''Korol' i Šut''' ('''Kunigaz da nagrnik'''; ''[[Venäkel'|venäkelel]]:'' ''Король и Шут'') om [[Venäma|venälaine]] muzikaline [[pankrok]]grupp. Se om lujas tutab ičeze tekstoiden tagut; nened tekstad oma tobjimalaz mistižed vai istorižed. Gruppan scenine grim om pöl'gästoitai i kožub sen imidžanke lujas hüvin.
+'''«Korol' i Šut»''' ('''Kunigaz da nagrnik'''; ''[[Venäkel'|venäkelel]]:'' ''Король и Шут'') om [[Venäma|venälaine]] muzikaline [[pankrok]]grupp. Se om lujas tutab ičeze tekstoiden tagut; nened tekstad oma tobjimalaz mistižed vai istorižed. Gruppan scenine grim om pöl'gästoitai i kožub sen imidžanke lujas hüvin.
 
 == Mülükund ==
 === Nügudlaine mülükund ===
