*Empty MediaWiki Message*

--- a/La_Bouche.mw
+++ b/La_Bouche.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://labouche.info/
 }}
-'''La Bouche''' oli [[Saksanma|sakslaine]] [[evrodens]]grupp [[Frankfurt]]aspäi. Mülükund oli ''[[Tornton Melani|Melani Tornton]]'' da ''[[Makkrei Lein|Lein Makkrei]]''.
+'''«La Bouche»''' oli [[Saksanma|sakslaine]] [[evrodens]]grupp [[Frankfurt]]aspäi. Mülükund oli ''[[Tornton Melani|Melani Tornton]]'' da ''[[Makkrei Lein|Lein Makkrei]]''.
 
 == Diskografii ==
 
