--- a/Serebro.mw
+++ b/Serebro.mw
@@ -1,5 +1,5 @@
 [[Fail:ESC 2007 Russia - Serebro - Song No 1.jpg|thumb|right|250px|Serebro [[Evrovizii|Evrovizijal]]]]
-'''Serebro''' (''Серебро'', [[venäkel'|venäkelel]] — ''hobed'') om populärine [[Venäma|venälaine]] muzikaline popgrupp. Mülükund om ''Jelena Temnikova'', ''Ol'ga Serebräkina'' i ''Anastasija Karpova''.
+'''«Serebro»''' (''Серебро'', [[venäkel'|venäkelel]] — ''hobed'') om populärine [[Venäma|venälaine]] muzikaline popgrupp. Mülükund om ''Jelena Temnikova'', ''Ol'ga Serebräkina'' i ''Anastasija Karpova''.
 
 Vl 2007 Serebro eziniba „[[Evrovizii]]“-konkursal, kus pajatiba „[[Song #1]]“-pajon. Grupp sai 3-nden sijan.
 
