*Empty MediaWiki Message*

--- a/Rammstein.mw
+++ b/Rammstein.mw
@@ -1,5 +1,5 @@
 [[Fail:Rammstein logo 2.svg|thumb|200px|right|Gruppan emblem]]
-'''Rammstein''' [Rammštain] om [[Saksanma|germanijalaine]] rokgrupp, kudamb edestab muzikad [[indastrial-metal]] i [[Neue Deutsche Härte]]-stiliš. Gruppan aluz oli pandud vl 1994 [[Berlin]]as.
+'''«Rammstein»''' [Rammštain] om [[Saksanma|germanijalaine]] rokgrupp, kudamb edestab muzikad [[indastrial-metal]] i [[Neue Deutsche Härte]]-stiliš. Gruppan aluz oli pandud vl 1994 [[Berlin]]as.
 
 == Mülükund ==
 * [[Kruspe Rihard|Richard Z. Kruspe]]
