*Empty MediaWiki Message*

--- a/Pussy_Riot.mw
+++ b/Pussy_Riot.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://pussy-riot.livejournal.com/
 }}
-'''Pussy Riot''' om venälaine pankrokgrupp [[Moskv]]aspäi (vspäi 2011.).
+'''«Pussy Riot»''' om venälaine pankrokgrupp [[Moskv]]aspäi (vspäi 2011.).
 
 [[18. eloku|Elokun 18. päiväl]] ičeze huliganižes tegos (pajatandas i koukičendas päjumalanpertiš) koume kollektivan solistad ([[Tolokonnikova Nadežda|Nadežda Tolokonnikova]], [[Alöhina Marija|Marija Alöhina]] da [[Samucevič Ekaterina|Ekaterina Samucevič]]) oliba suttud 2 vodeks.
 
