*Empty MediaWiki Message*

--- a/Oomph!.mw
+++ b/Oomph!.mw
@@ -1,5 +1,5 @@
 [[Fail:Dero (OOMPH!) at Ruisrock 2006 - crowdsurfing.jpg|pisi|280px|Dero, gruppan vokalist i pämez']]
-'''Oomph!''' om [[Saksanma|germanijalaine]] rokgrupp, kudamb edestab muzikad [[Neue Deutsche Härte]]-stiliš. Gruppan aluz oli pandud vl 1989 [[Vol'fsburg]]as, [[Saksanma]].
+'''«Oomph!»''' om [[Saksanma|germanijalaine]] rokgrupp, kudamb edestab muzikad [[Neue Deutsche Härte]]-stiliš. Gruppan aluz oli pandud vl 1989 [[Vol'fsburg]]as, [[Saksanma]].
 
 == Mülükund ==
 * [[Dero Goi]] 
