--- a/No_Mercy_(popgrupp).mw
+++ b/No_Mercy_(popgrupp).mw
@@ -14,7 +14,7 @@
  | Sait = http://www.nomercymusic.com/
 }}
 {{tärtused|No Mercy}}
-'''No Mercy''' om [[AÜV|amerikalaine]] evrodensgrupp (vspäi [[1995]]). Mülükund oma ''Marti Sintron'', ''Ariel' Ernandes'', ''Gabriel' Ernandes''.
+'''«No Mercy»''' om [[AÜV|amerikalaine]] evrodensgrupp (vspäi [[1995]]). Mülükund oma ''Marti Sintron'', ''Ariel' Ernandes'', ''Gabriel' Ernandes''.
 
 == Diskografii ==
 
