*Empty MediaWiki Message*

--- a/Naily.mw
+++ b/Naily.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Alexx W.Crow, Krew, William, Z-Skin
  | Sait = http://www.naily.ru/
 }}
-'''Naily''' om [[Venäma|venälaine]] nümetalgrupp [[Murmansk]]aspäi (vspäi 2003.). Mülükund om ''Rustam Šaripov'', ''Dmitrii Muzičenko'', ''Dmitrii Kožuro'', ''Filipp Terpeckii'' da ''Sergei Dovženko''.
+'''«Naily»''' om [[Venäma|venälaine]] nümetalgrupp [[Murmansk]]aspäi (vspäi 2003.). Mülükund om ''Rustam Šaripov'', ''Dmitrii Muzičenko'', ''Dmitrii Kožuro'', ''Filipp Terpeckii'' da ''Sergei Dovženko''.
 
 == Diskografii ==
 
