*Empty MediaWiki Message*

--- a/Myllärit.mw
+++ b/Myllärit.mw
@@ -12,7 +12,7 @@
  | Eksühtnijad = 
  | Sait = http://www.myllarit.ru/
 }}
-'''Myllärit''' (''mellicnikad'') om [[Venäma|venälaine]] folkrokgrupp [[Petroskoi]]špäi.
+'''«Myllärit»''' (''mellicnikad'') om [[Venäma|venälaine]] folkrokgrupp [[Petroskoi]]špäi.
 
 Pajatadas pajad [[karjalan kel'|karjalan]], [[suomen kel'|suomen]] da [[venäkel'|venän]] kelil.
 
