*Empty MediaWiki Message*

--- a/MoRandi.mw
+++ b/MoRandi.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://www.morandi-music.com/
 }}
-'''MoRandi''' om [[Romanii|romanijalaine]] popmuzikgrupp [[Buharest]]aspäi, [[2004]]. vlpäi. Mülükund oma ''[[Moga Marius|Marius Moga]]'' da ''[[Ropča Andrei|Andrei Štefan Ropča]]''.
+'''«MoRandi»''' om [[Romanii|romanijalaine]] popmuzikgrupp [[Buharest]]aspäi, [[2004]]. vlpäi. Mülükund oma ''[[Moga Marius|Marius Moga]]'' da ''[[Ropča Andrei|Andrei Štefan Ropča]]''.
 
 == Diskografii ==
 {{kacu|MoRandi:n diskografii}}
