--- a/Metallica.mw
+++ b/Metallica.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Lloid Grant, Deiv Mastein, Ron Makgovni, Kliff Börton, Džeison N'justed
  | Sait = http://www.metallica.com/
 }}
-'''Metallica''' om [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] muzikgrupp, kudamb edestab muzikad [[trešmetal]] da [[hevimetal]]-stiliš.
+'''«Metallica»''' om [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] muzikgrupp, kudamb edestab muzikad [[trešmetal]] da [[hevimetal]]-stiliš.
 
 Gruppan aluz om pandud vl 1981.
 
