*Empty MediaWiki Message*

--- a/Masterboy.mw
+++ b/Masterboy.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = Linda Rokko, Annabell' Kei
  | Sait = http://www.masterboy.de.vu/
 }}
-'''Masterboy''' om [[Saksanma|sakslaine]] [[evrodens]]grupp [[Val'dorf]]aspäi (vspäi [[1989]].). Mülükund oma ''Tommi Šleh'', ''Enriko Cabler'' da ''Triksi Del'gado''.
+'''«Masterboy»''' om [[Saksanma|sakslaine]] [[evrodens]]grupp [[Val'dorf]]aspäi (vspäi [[1989]].). Mülükund oma ''Tommi Šleh'', ''Enriko Cabler'' da ''Triksi Del'gado''.
 
 == Diskografii ==
 
