*Empty MediaWiki Message*

--- a/Linkin_Park.mw
+++ b/Linkin_Park.mw
@@ -1,10 +1,10 @@
 [[Fail:Linkin Park @ Sonisphere.jpg|thumb|300px|Linkin Park]]
-'''Linkin Park''' om [[AÜV|amerikalaine]] muzikaline rok-grupp.
+'''«Linkin Park»''' om [[AÜV|amerikalaine]] muzikaline grupp.
 
 Mülükund:
 * Čester Bennington (Chester Bennington)
 * Rob Burdon (Rob Bourdon)
-* Brad Delson
+* Bred Delson (Brad Delson)
 * Deiv Farrell (Dave Farrell)
 * Džo Han (Joe Hahn)
 * Maik Šinoda (Mike Shinoda)
