*Empty MediaWiki Message*

--- a/System_of_a_Down.mw
+++ b/System_of_a_Down.mw
@@ -1,5 +1,5 @@
 [[Fail:System of a Down, Download Festival 2005 (1).JPG|thumb|250px|System of a Down]]
-'''System of a Down''' om [[AÜV|amerikalaine]] muzikaline rokgrupp.
+'''«System of a Down»''' om [[AÜV|amerikalaine]] muzikaline rokgrupp.
 
 Mülükund:
 * Daron Malakän (Daron Malakian)
