*Empty MediaWiki Message*

--- a/T.A.T.u..mw
+++ b/T.A.T.u..mw
@@ -1,5 +1,5 @@
 [[Fail:Тату (группа) 7.jpg|thumb|right|250px|t.A.T.u.]]
-'''t.A.T.u.''' oli populärine [[Venäma|venälaine]] muzikaline popgrupp. Mülükund oli ''[[Katina Jelena|Jelena Katina]]'' i ''[[Volkova Julija|Julija Volkova]]''.
+'''«t.A.T.u.»''' oli populärine [[Venäma|venälaine]] muzikaline popgrupp. Mülükund oli ''[[Katina Jelena|Jelena Katina]]'' i ''[[Volkova Julija|Julija Volkova]]''.
 
 Vl 2003 t.A.T.u. eziniba „[[Evrovizii]]“-konkursal, kus pajatiba „[[Ne ver', ne boisä]]“-pajon. Grupp sai 3-nden sijan.
 
