*Empty MediaWiki Message*

--- a/Tanzwut.mw
+++ b/Tanzwut.mw
@@ -1,5 +1,5 @@
 [[Fail:Tanzwut Rockband 2011.jpg|thumb|right|280px|Tanzwut]]
-'''Tanzwut''' om [[Saksanma|germanijalaine]] muzikgrupp, kudamb edestab muzikad [[Neue Deutsche Härte]] i [[keskaigaine metal]]-stiliš. Se om tehtud vl 1998 [[Corvus Corax (grupp)|Corvus Corax]]-gruppan ühtnijoil.
+'''«Tanzwut»''' om [[Saksanma|germanijalaine]] muzikgrupp, kudamb edestab muzikad [[Neue Deutsche Härte]] i [[keskaigaine metal]]-stiliš. Se om tehtud vl 1998 [[Corvus Corax (grupp)|Corvus Corax]]-gruppan ühtnijoil.
 
 == Mülükund ==
 * [[Teufel]]
